# hw06-wujj98

./: .buildinfo  GW150914_data.csv  LICENSE  Makefile  README.html  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  hw06-description.html  index.html  index.ipynb  intro.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  intro.doctree
.doctrees/.pytest_cache/: README.doctree
.doctrees/ligotools/.pytest_cache/: README.doctree
.pytest_cache/: README.html
_build/.doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  intro.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  index.doctree
_build/jupyter_execute/: index.ipynb  index.py
_sources/: README.md  index.ipynb
ligotools/: __init__.py  utils.py
ligotools/.pytest_cache/: README.html
ligotools/tests/: test_readligo.py  test_utils.py
