[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Jiaji Wu
author_email     = wujj98@berkeley.edu
description      = A Python library used in LIGO project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, toys
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7, <3.0.0
install_requires =
	numpy==1.16


[options.packages.find]
exclude =
    examples*
    docs*